# observer

./: .gitignore  LICENSE  README-zh.md  README.md  meson.build  oremind.1.in  oremind.bash  oremind.zh_CN.1.in  pyproject.toml  source2native.1.in  source2native.bash-completion  source2native.py
debian/: changelog  changelog-zh_CN  control  copyright
po/: LINGUAS  POTFILES  de.po  en.po  eo.po  fr.po  it.po  ja.po  ko.po  meson.build  observer.pot  oremind.pot  th.po  vi.po  zh_CN.po  zh_TW.po
src/: AppConfig.cpp  AppConfig.h  AppIcon.cpp  AppIcon.h  AuxGuiProcess.cpp  AuxGuiProcess.h  DataDirStore.cpp  DataDirStore.h  DeepSeekBrowserFrame.cpp  DeepSeekBrowserFrame.h  DeepSeekLauncher.cpp  DeepSeekLauncher.h  DeepSeekWebViewSetup.cpp  DeepSeekWebViewSetup.h  HistoryFrame.cpp  HistoryFrame.h  LayoutDiag.cpp  LayoutDiag.h  Observation.h  ObservationDialog.cpp  ObservationDialog.h  ObservationStore.cpp  ObservationStore.h  ObserverApp.cpp  ObserverApp.h  ObserverFrame.cpp  ObserverFrame.h  QuoteProvider.cpp  QuoteProvider.h  RemindDialog.cpp  RemindDialog.h  RenderDriver.h  SqliteStore.cpp  SqliteStore.h  StatisticsDialog.cpp  StatisticsDialog.h  SystemFrame.cpp  SystemFrame.h  UiTheme.cpp  UiTheme.h  (+15 more)
tests/: meson.build  oremind_test.c  solid_frame_test.cpp  transparent_frame_test.cpp
